# scotch

./: .gitignore  CMakeLists.txt  README.md  TASKS.md
corpus/container/: README.md
corpus/format19/: README.md  lionfish19-c00-f00.6y5uv  lionfish19-c00-f00.mb19  lionfish19-c00-f01.6y5uv  lionfish19-c00-f01.mb19  manifest.tsv
docs/: acorn-comparison-workflow.md  cross-check-corpus.md  decomp19-arm-harness.md  encoder-policy-comparison.md  ffmpeg-input.md  implementation-status.md  moviefs-nut-passthrough.md  nut-output.md  player-bugs.md  type20-shipped-vs-source.md
docs/quality/: .gitignore  README.md  codec-technology-comparison.md
docs/spec/: README.md  ae7-armovie-container.md  armovie-sound.md  colour-pipeline.md  eidos-escape.md  linepack-type800.md  methodology.md  moving-blocks-7-17-20.md  quality-model.md  raw-formats-2-23.md  tca-type500.md  type1-moving-lines.md  type19-super-moving-blocks.md  uncompressed-video-formats.md
include/replay/: armsim.h  codec_movingblocks.h  codec_movingblocksbeta.h  codec_movingblockshq.h  codec_movinglines.h  codec_supermovingblocks.h  codecif.h  mb_codec.h  mb_color.h  mb_encode.h  mb_frame.h  mb_frame_verify.h  mb_huffman.h  mb_metrics.h  mb_motion.h  mb_quality.h  mb_rate_control.h  mb_repeat.h  replay_ae7.h  replay_ae7_write.h  replay_bitstream.h  replay_buffer.h  replay_escape100.h  replay_escape100_enc.h  replay_escape122.h  replay_escape122_enc.h  replay_escape124.h  replay_escape130.h  replay_escape130_enc.h  replay_escape_adpcm.h  replay_movie.h  replay_moviefs.h  replay_nut.h  replay_sound.h  replay_status.h  replay_tca.h  replay_type2.h  replay_type23.h
notes/: c-tooling-implementation-roadmap.md  c-tooling-interface-specification.md  c-tooling-libraries-and-dependencies.md  c-tooling-verification-strategy.md  complib-example-compressors.md  complib-overview.md  moving-blocks-c-implementation-plan.md  moving-blocks-compression-overview.md  moving-blocks-compressor-parameters.md  moving-blocks-decision-comparison.md  moving-blocks-format17-bitstream.md  moving-blocks-format19-bitstream.md  moving-blocks-format20-bitstream.md  moving-blocks-format7-bitstream.md  moving-blocks-next-implementation-target.md  moving-blocks-variants.md  moving-lines-bitstream-first-pass.md  moving-lines-compressor-process.md  moving-lines-decompressor.md  moving-lines-inventory.md  quality-measurements.md  rate-control.md  replay-ae7-container.md  replay-ae7-join-writer.md  replay-codec-input-formats.md  replay-codec-interface-temporal-spatial.md  replay-video-format-inventory.md  ro371-vs-ro2003-high-level.md  super-moving-blocks-compressor-display.md  task-list.md
src/: codec_movingblocks.c  codec_movingblocksbeta.c  codec_movingblockshq.c  codec_movinglines.c  codec_supermovingblocks.c  dec130_render.c  dec130_render.h  dec130_render_tbl.h  escape100_codebook.h  escape130_tables.h  mb_codec.c  mb_color.c  mb_encode.c  mb_frame_verify.c  mb_huffman.c  mb_metrics.c  mb_motion.c  mb_quality.c  mb_rate_control.c  mb_repeat.c  replay_ae7.c  replay_ae7_write.c  replay_bitstream.c  replay_buffer.c  replay_codecif.c  replay_escape100.c  replay_escape100_enc.c  replay_escape122.c  replay_escape122_enc.c  replay_escape124.c  replay_escape130.c  replay_escape130_enc.c  replay_escape_adpcm.c  replay_movie.c  replay_moviefs.c  replay_nut.c  replay_sound.c  replay_status.c  replay_tca.c  replay_type2.c  (+1 more)
tests/: make_audio_movie.c  make_decomp17_crosscheck_fixtures.c  make_decomp19_crosscheck_fixtures.c  make_decomp20_crosscheck_fixtures.c  make_decomp7_crosscheck_fixtures.c  make_fullmovie_crosscheck_fixtures.c  make_movinglines_crosscheck_fixtures.c  make_sound_only_movie.c  make_type23_movie.c  test_armsim_core.c  test_armsim_corpus.sh  test_codec_modules_init.c  test_codec_movingblocks.c  test_codec_movingblocksbeta.c  test_codec_movingblockshq.c  test_codec_movinglines.c  test_codec_supermovingblocks.c  test_common.h  test_decomp17_compiled.sh  test_decomp17_encoded.sh  test_decomp19_compiled.sh  test_decomp19_unicorn.sh  test_decomp20_compiled.sh  test_decomp23_compiled.sh  test_decomp7_compiled.sh  test_direct_container.sh  test_escape100_encode.c  test_escape100_module.c  test_escape122_encode.c  test_escape130_encode.c  test_ffmpeg_pipe.sh  test_fullmovie_crosscheck.sh  test_mb19_quality_sweep.sh  test_mb_codecs.c  test_mb_color.c  test_mb_color_complib.c  test_mb_encode.c  test_mb_huffman.c  test_mb_metrics.c  test_mb_motion.c  (+41 more)
tools/: check_format19_corpus.sh  decomp19_unicorn.py  default_poster.h  mb19_compare_reports.py  mb19_quality_sweep.py  movinglines_unicorn.py  rate_quality_sweep.py  replay-make  replay_armsim.c  replay_audio_snr.py  replay_encode.c  replay_extract.c  replay_inspect.c  replay_join.c  replay_movinglines.c  replay_quality_curve.py  replay_transcode.c  replay_verify.c
